--- a/MultiQueueSimulation/MultiQueueModels/MultiQueueModels.csproj
+++ b/MultiQueueSimulation/MultiQueueModels/MultiQueueModels.csproj
@@ -33,15 +33,20 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="ZedGraph">
+      <HintPath>..\..\..\Template\Template\MultiQueueSimulation\zedgraph_dll_v509_459\zedgraph_dll_v5.0.9\ZedGraph.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Enums.cs" />
+    <Compile Include="Graph.cs" />
     <Compile Include="PerformanceMeasures.cs" />
     <Compile Include="Server.cs" />
     <Compile Include="SimulationCase.cs" />
