last update for task one

--- a/MultiQueueSimulation/MultiQueueSimulation/MultiQueueSimulation.csproj
+++ b/MultiQueueSimulation/MultiQueueSimulation/MultiQueueSimulation.csproj
@@ -108,7 +108,10 @@
   <ItemGroup>
     <Content Include="TestCases\ReadMe.txt" />
     <Content Include="TestCases\TestCase1.txt" />
+    <Content Include="TestCases\TestCase2.txt" />
+    <Content Include="TestCases\TestCase3.txt" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
